plugins {
  id 'java-library'
}

java {
  sourceCompatibility = JavaVersion.VERSION_1_8
  targetCompatibility = JavaVersion.VERSION_1_8
}


dependencies {
  api "com.badlogicgames.ashley:ashley:$ashleyVersion"
  api "com.badlogicgames.gdx-controllers:gdx-controllers-core:$gdxControllersVersion"
  api "com.badlogicgames.gdx:gdx-ai:$aiVersion"
  api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
  api "com.badlogicgames.gdx:gdx:$gdxVersion"
  implementation 'com.h2database:h2:2.1.214'
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'org.mongodb:mongodb-driver-sync:4.11.1' // If using MongoDB
    implementation 'org.slf4j:slf4j-api:2.0.9'
    implementation 'ch.qos.logback:logback-classic:1.4.11'
  implementation "com.esotericsoftware:kryonet:2.22.0-RC1"
  implementation "com.esotericsoftware.kryo:kryo:2.24.0"
  implementation "net.java.dev.jna:jna:5.13.0"
  implementation "net.java.dev.jna:jna-platform:5.13.0"
  implementation "com.badlogicgames.gdx:gdx-backend-headless:$gdxVersion"

  // If you're using Java 9+ also add:
  implementation "javax.activation:activation:1.1.1"
  implementation "javax.xml.bind:jaxb-api:2.3.1"


  implementation("at.favre.lib:bcrypt:0.10.2")
  if(enableGraalNative == 'true') {
    implementation "io.github.berstanio:gdx-svmhelper-annotations:$graalHelperVersion"
  }
}
